--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <p>The causes of homelessness are complex, encompassing a broad range of individual and structural determinants, including housing availability and affordability, economic and employment opportunities (or lack thereof), physical and mental health outcomes, domestic and family violence, and social and community connections.</p>
               <br>
               <center>
+                <button type="button" class="collapsible">Open Collapsible</button>
               <table class="normal-table">
                <caption style="text-align:left"><p>Table. Drivers of homelessness in Western Australia</p></caption>
                 <thead>
                   <tr>
-                    <td><p>Drivers</p></td>
                     <td><p>Indicators</p></td>
                     <td><p>Most current values</p></td>
                     <td><p>Trend over time</p></td>
@@ -330,7 +330,6 @@ Additionally, SHSC records include data on the number of nights clients spend in
                  </thead>
                 <tbody>
                   <tr>
-                    <td rowspan="13"><p>Housing affordability</p></td>
                     <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
                     <td><p>10.7%</p></td>
                     <td><p>Increasing</p></td>
@@ -341,99 +340,8 @@ Additionally, SHSC records include data on the number of nights clients spend in
                       Rest of state – 26.2%</p></td>
                     <td><p>Decreasing</p></td>
                   </tr>
-                  <tr>
-                    <td><p>Proportion of low income households remaining in housing stress from one year to the next  (2017-2020)<sup>1</sup></p></td>
-                    <td><p>Australia – 48.3%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="4"><p>Housing affordability (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Owner – 2.9%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Owner with a mortgage – 14.0%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – private landlord – 17.4%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – state of territory housing – 20.9%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="4"><p>Home ownership (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Owner without a mortgage – 26.6%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Owner with a mortgage – 42.7%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – private landlord – 22.5%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – state of territory housing – 2.8%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="2"><p>Rental affordability index (Q2, 2020)<sup>3</sup></p></td>
-                    <td><p>Perth – Extremely unaffordable</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Rest of Western Australia – Extremely unaffordable</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                 <tr>
-                   <td rowspan="6"><p>Housing supply</p></td>
-                   <td rowspan="3"><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
-                   <td><p>Indigenous community housing – 2,699</p></td>
-                   <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Community housing – 7,997</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Public housing - 31,919</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Number of applicants on waiting list (2021)<sup>4</sup></td>
-                    <td><p>14,619</p>
-                    </td>
-                   <td>
-                     <p>Stable</p><br>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td rowspan="2"><p>Waiting time to secure public housing accommodation (2020)<sup>5</sup></td>
-                    <td><p>Average – 94 weeks</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Median – 48 weeks</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>`
-                </tbody>
-                <tfoot>
-                 <tr>
-                  <td colspan="4">
-                    <p2>
-                      <sup>1</sup>The Household, Income and Labour Dynamics in Australia (HILDA) Survey: General Release 20, 2022<br>
-                      <sup>2</sup>ABS 4130.0 – Housing Occupancy and Costs, 2019-20<br>
-                      <sup>3</sup>Rental Affordability Index, SGS Economics & Planning.<br>
-                      <sup>4</sup>AIHW Housing assistance in Australia 2021<br>
-                      <sup>5</sup>Government of Western Australia Department of Communities, Housing Authority Annual Report 2019-20</p2>
-                  </td>
-                 </tr>
-                </tfoot>
-              </table>
+                </table>
+                
               </center>   
               
             </div>
