--- a/testing.html
+++ b/testing.html
@@ -1,1 +1,22 @@
-<div class='tableauPlaceholder' id='viz1656971555317' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;Rateofhomelessness-census&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3_16568893002690&#47;Rateofhomelessness-census' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;Rateofhomelessness-census&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1656971555317');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='700px';vizElement.style.height='950px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='700px';vizElement.style.height='950px';} else { vizElement.style.width='100%';vizElement.style.height='1950px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<button type="button" class="collapsible">Open Collapsible</button>
+<div class="content">
+ <table class="normal-table">
+ 
+                <thead>
+                  <tr>
+                    <td><p>Drivers</p></td>
+                    <td><p>Indicators</p></td>
+                    <td><p>Most current values</p></td>
+                    <td><p>Trend over time</p></td>
+                  </tr>
+                 </thead>
+                <tbody>
+                  <tr>
+                    <td rowspan="13"><p>Housing affordability</p></td>
+                    <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
+                    <td><p>10.7%</p></td>
+                    <td><p>Increasing</p></td>
+                  </tr>
+                  </table>
+
+</div>
