--- a/testing.html
+++ b/testing.html
@@ -1,4 +1,14 @@
-<button type="button" class="collapsible">Open Collapsible</button>
+<!DOCTYPE html>
+<html>
+  <head>
+   
+<meta charset="utf-8">
+<!-- Load CSS -->
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
+ </head>
+ 
+
+   <button type="button" class="collapsible">Housing affordability</button>
  <table class="normal-table">
  
                 <thead>
@@ -17,3 +27,4 @@
                     <td><p>Increasing</p></td>
                   </tr>
                   </table>
+</html>
