--- a/testing.html
+++ b/testing.html
@@ -9,6 +9,7 @@
  
 
    <button type="button" class="collapsible">Housing affordability</button>
+  <div class="content">
  <table class="normal-table">
  
                 <thead>
@@ -27,4 +28,5 @@
                     <td><p>Increasing</p></td>
                   </tr>
                   </table>
+  </div>
 </html>
