--- a/testing.html
+++ b/testing.html
@@ -62,7 +62,7 @@
 <h2>Collapsibles</h2>
 
 <p>A Collapsible:</p>
-<button type="button" class="collapsible">Open Collapsible</button>
+<button type="button" class="collapsible">Housing affordability</button>
 <div class="content">
  <table class="normal-table">
  
