--- a/testing.html
+++ b/testing.html
@@ -63,22 +63,21 @@
 <button type="button" class="collapsible">Housing affordability</button>
 <div class="content">
  <table class="normal-table">
- 
-                <thead>
-                  <tr>
-                    <td><p>Indicators</p></td>
-                    <td><p>Most current values</p></td>
-                    <td><p>Trend over time</p></td>
-                  </tr>
-                 </thead>
-                <tbody>
-                  <tr>
-                    <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
-                    <td><p>10.7%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  </table>
-
+   <thead>
+     <tr>
+      <td><p>Indicators</p></td>
+      <td><p>Most current values</p></td>
+      <td><p>Trend over time</p></td>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+       <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
+       <td><p>10.7%</p></td>
+       <td><p>Increasing</p></td>
+      </tr>
+     </tbody>
+    </table>
 </div>
 
 <p>Collapsible Set:</p>
