--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <td style="width:70%; vertical-align:top;">
         <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
          <br>
-        <h2>Version 4.0</h2><br>
+        <h2>Version 4.0 (Demo)</h2><br>
         <h2><i>Dashboard 2022</i></h2>
       </td>
       <td style="width:30%; vertical-align:top;">
@@ -183,7 +183,7 @@
   </table>
     <div class="spacer"></div>
           <div class="clr"></div>
-  <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard (<i>the Dashboard</i>), which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
+  <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
   <br>
   The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.</p>
   <br><br>
