--- a/testing.html
+++ b/testing.html
@@ -1,141 +1,128 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-	</head>
-	<body>
-            <center>
-              <table class="normal-table">
-               <caption style="text-align:left"><p>Table. Drivers of homelessness in Western Australia</p></caption>
-                <thead>
-                  <tr>
-                    <td><p>Drivers</p></td>
-                    <td><p>Indicators</p></td>
-                    <td><p>Most current values</p></td>
-                    <td><p>Trend over time</p></td>
-                  </tr>
-                 </thead>
-                <tbody class="labels">
-                  <tr>
-                    <td colspan="4">
-			    <label for="housing-affordability"><p>Housing affordability</p></label>
-					<input type="checkbox" name="housing-affordability" id="housing-affordability" data-toggle="toggle">
-			    </td>
-			</tr>
-		      </tbody>
-		      <tbody class="hide">
-			      <td></td>
-			      <td><p>Proportion experiencing household stress in Perth (2017 - 2020)<sup>1</sup></p></td>
-                    <td><p>10.7%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Proportion of low-income rental households spending more than 30 per cent of their gross income on housing costs (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Perth -36.7%<br>
-                      Rest of state – 26.2%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Proportion of low income households remaining in housing stress from one year to the next  (2017-2020)<sup>1</sup></p></td>
-                    <td><p>Australia – 48.3%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="4"><p>Housing affordability (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Owner – 2.9%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Owner with a mortgage – 14.0%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – private landlord – 17.4%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – state of territory housing – 20.9%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="4"><p>Home ownership (2019-2020)<sup>2</sup></p></td>
-                    <td><p>Owner without a mortgage – 26.6%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Owner with a mortgage – 42.7%</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – private landlord – 22.5%</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Renter – state of territory housing – 2.8%</p></td>
-                    <td><p>Increasing</p></td>
-                  </tr>
-                  <tr>
-                    <td rowspan="2"><p>Rental affordability index (Q2, 2020)<sup>3</sup></p></td>
-                    <td><p>Perth – Extremely unaffordable</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Rest of Western Australia – Extremely unaffordable</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-		    </tbody>
+<style>
+table { 
+	width: 750px; 
+	border-collapse: collapse; 
+	margin:50px auto;
+	}
+
+th { 
+	background: #3498db; 
+	color: white; 
+	font-weight: bold; 
+	}
+
+td, th { 
+	padding: 10px; 
+	border: 1px solid #ccc; 
+	text-align: left; 
+	font-size: 18px;
+	}
+
+.labels tr td {
+	background-color: #2cc16a;
+	font-weight: bold;
+	color: #fff;
+}
+
+.label tr td label {
+	display: block;
+}
+
+
+[data-toggle="toggle"] {
+	display: none;
+}
+
+</style>
+
+<body>
+<table>
+	<thead>
+		<tr>
+			<th>Regian</th>
+			<th>Q1 2010</th>
+			<th>Q2 2010</th>
+			<th>Q3 2010</th>
+			<th>Q4 2010</th>
+		</tr>
+	</thead>
 	<tbody>
-                 <tr>
-                   <td rowspan="6"><p>Housing supply</p></td>
-                   <td rowspan="3"><p>Number of social housing dwellings (2021)<sup>4</sup></p></td>
-                   <td><p>Indigenous community housing – 2,699</p></td>
-                   <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Community housing – 7,997</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Public housing - 31,919</p></td>
-                    <td><p>Decreasing</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Number of applicants on waiting list (2021)<sup>4</sup></td>
-                    <td><p>14,619</p>
-                    </td>
-                   <td>
-                     <p>Stable</p><br>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td rowspan="2"><p>Waiting time to secure public housing accommodation (2020)<sup>5</sup></td>
-                    <td><p>Average – 94 weeks</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>
-                  <tr>
-                    <td><p>Median – 48 weeks</p></td>
-                    <td><p>Stable</p></td>
-                  </tr>`
-                </tbody>
-                <tfoot>
-                 <tr>
-                  <td colspan="4">
-                    <p2>
-                      <sup>1</sup>The Household, Income and Labour Dynamics in Australia (HILDA) Survey: General Release 20, 2022<br>
-                      <sup>2</sup>ABS 4130.0 – Housing Occupancy and Costs, 2019-20<br>
-                      <sup>3</sup>Rental Affordability Index, SGS Economics & Planning.<br>
-                      <sup>4</sup>AIHW Housing assistance in Australia 2021<br>
-                      <sup>5</sup>Government of Western Australia Department of Communities, Housing Authority Annual Report 2019-20</p2>
-                  </td>
-                 </tr>
-                </tfoot>
-              </table>
-              </center>   
+		<tbody class="labels">
+			<tr>
+				<td colspan="5">
+					<label for="accounting">Accounting</label>
+					<input type="checkbox" name="accounting" id="accounting" data-toggle="toggle">
+				</td>
+			</tr>
+		</tbody>
+		<tbody class="hide">
+			<tr>
+				<td>Australia</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+			<tr>
+				<td>Central America</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+		</tbody>
+		<tbody class="labels">
+			<tr>
+				<td colspan="5">
+					<label for="management">Management</label>
+					<input type="checkbox" name="management" id="management" data-toggle="toggle">
+				</td>
+			</tr>
+		</tbody>
+		<tbody class="hide">
+			<tr>
+				<td>Australia</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+			<tr>
+				<td>Central America</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+			<tr>
+				<td>Europe</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+			<tr>
+				<td>Middle East</td>
+				<td>$7,685.00</td>
+				<td>$3,544.00</td>
+				<td>$5,834.00</td>
+				<td>$10,583.00</td>
+			</tr>
+		</tbody>		
+	</tbody>
+</table>
+	
 <style>
 	$(document).ready(function() {
 	$('[data-toggle="toggle"]').change(function(){
 		$(this).parents().next('.hide').toggle();
 	});
 });
-</style></body></html>
+</style>
+	
+	</body>
+
+
+</html>
