--- a/testing.html
+++ b/testing.html
@@ -114,13 +114,13 @@ td, th {
 	</tbody>
 </table>
 	
-<style>
+<script>
 	$(document).ready(function() {
 	$('[data-toggle="toggle"]').change(function(){
 		$(this).parents().next('.hide').toggle();
 	});
 });
-</style>
+</script>
 	
 	</body>
 
