--- a/testing.html
+++ b/testing.html
@@ -3,6 +3,66 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+  
+  p {
+	font-family: Apud-Roman;
+	line-height: 2em;
+	color: #1c1a1a;
+	font-size: 11pt;
+}
+
+p2 {
+	font-family: Apud-Roman;
+	line-height: 2em;
+	color: #1c1a1a;
+	font-size: 8pt;
+}
+h1 {
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 22pt;
+}
+h2 {
+	font-family: 'Droid Serif', Apud-Black, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 16pt;
+}
+h3 {
+	font-family: 'Droid Serif',Apud-BoldItalic, sans-serif;
+	line-height: 1.5em;
+	color: #b22525;
+	text-decoration: none;
+	font-size: 14pt;
+}
+h4 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1a;
+	text-decoration: none;
+	font-size: 13pt;
+}
+h5 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1aF;
+	text-decoration: none;
+	font-size: 11pt;
+}
+h6 {
+	font-family: 'Droid Serif', Apud-Medium, sans-serif;
+	line-height: 1.5em;
+	color: #1c1a1a;
+	text-decoration: none;
+	font-size: 10pt;
+}
+
+sup {font-size:xx-small; vertical-align:super;}
+  
+  
 .collapsible {
   background-color: #777;
   color: white;
@@ -25,6 +85,38 @@
   overflow: hidden;
   background-color: #f1f1f1;
 }
+  
+  
+.normal-table {
+	width:90%;
+	margin: 30px 30px;
+}
+
+.normal-table td {
+	 padding: 5px;
+}
+
+
+.normal-table thead {
+	border-top:1px solid;
+	border-bottom:1px solid;
+	border-color: #bcbcbc;
+	font-weight:bold;
+}
+
+.normal-table tbody tr:last-of-type {
+    border-bottom: 1px solid #bcbcbc;
+}
+
+.normal-table tbody tr:hover td:not(
+[rowspan]) {background: #f3f3f3
+}
+
+.normal-table tbody tr:hover td[rowspan]:hover ~ td {
+	background: none;
+}
+
+  
 </style>
 </head>
 <body>
