--- a/testing.html
+++ b/testing.html
@@ -134,7 +134,7 @@ sup {font-size:xx-small; vertical-align:super;}
 <div class="content">
 <center>
 
-<table class="normal-table" border="1">
+<table class="normal-table">
 
 <caption style="text-align:left"><p>Table. Drivers of homelessness in Western Australia</p></caption>
 
