--- a/testing.html
+++ b/testing.html
@@ -97,7 +97,7 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 
-.normal-table thead {
+.normal-table thead td {
 	border-top:1px solid;
 	border-bottom:1px solid;
 	border-color: #000000;
