--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
                <caption style="text-align:left"><p>Table. Median length of support, days in support periods and nights accommodated, 2019/20,  and 2020/21, Western Australia and Australia</p></caption>
                 <thead>
                   <tr>
-                    <td></td>
-                    <td colspan="2" align="center"><p>2019/20</p></td>
-                    <td colspan="2" align="center"><p>2020/21</p></td>
+                    <th></th>
+                    <th colspan="2" align="center"><p>2019/20</p></td>
+                    <th colspan="2" align="center"><p>2020/21</p></td>
                   </tr>
                   <tr>
-                   <td><p>Support</p></td>
-                   <td><p>Western Australia</p></td>
-                   <td><p>Australia</p></td>
-                   <td><p>Western Australia</p></td>
-                    <td><p>Australia</p></td>
+                   <th><p>Support</p></th>
+                   <th><p>Western Australia</p></th>
+                   <th><p>Australia</p></th>
+                   <th><p>Western Australia</p></th>
+                    <th><p>Australia</p></th>
                   </tr>
                  </thead>
                 <tbody>
