--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ Additionally, SHSC records include data on the number of nights clients spend in
               <h4>Drivers of homelessness in Western Australia</h4>
                          
            
-<button type="button" class="collapsible">Housing affordability</button>
+              <button type="button" class="collapsible"><p>Housing affordability</p></button>
 <div class="tab-content">
 
 <table class="normal-table">
@@ -423,7 +423,7 @@ Rest of state – 26.2%</p></td>
 </div>
 
 
-<button type="button" class="collapsible">Housing supply</button>
+              <button type="button" class="collapsible"><p>Housing supply</p></button>
 <div class="tab-content">
 
 <table class="normal-table"> 
@@ -538,7 +538,7 @@ Rest of state – 26.2%</p></td>
 </div>
 
 
-<button type="button" class="collapsible">Young people - in custody and out-of- home care</button>
+              <button type="button" class="collapsible"><p>Young people - in custody and out-of- home care</p></button>
 <div class="tab-content">
 
 <table class="normal-table"> 
@@ -594,7 +594,7 @@ Rest of state – 26.2%</p></td>
 
 
 
-<button type="button" class="collapsible">Physical and mental health</button>
+              <button type="button" class="collapsible"><p>Physical and mental health</p></button>
 <div class="tab-content">
 
 <table class="normal-table"> 
@@ -650,7 +650,7 @@ Rest of state – 26.2%</p></td>
 
 
 
-<button type="button" class="collapsible">Domestic violence</button>
+              <button type="button" class="collapsible"><p>Domestic violence</p></button>
 <div class="tab-content">
 
 <table class="normal-table"> 
