--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@ Rest of state – 26.2%</p></td>
 
 
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'Table1')">Table</button>
   <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="Table1" class="tabcontent">
   
 <table class="normal-table"> 
 <thead>
